tests/snapshots/issue_preview__issue_preview_closed_issue.snap
---
source: tests/issue_preview.rs
expression: result
---
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                            ╭Issue Info╮
                            │Type:     │
                            │Issue     │
                            │State:    │
                            │Closed    │
                            │Author:   │
                            │janedoe   │
                            │Created:  │
                            ╰──────────╯
