tests/snapshots/issue_preview__issue_preview_many_assignees.snap
---
source: tests/issue_preview.rs
expression: result
---
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                            ╭Issue Info╮
                            │Type:     │
                            │Issue     │
                            │State:    │
                            │Open      │
                            │Author:   │
                            │teamlead  │
                            │Created:  │
                            ╰──────────╯
