tests/snapshots/issue_preview__issue_preview_no_selection.snap
---
source: tests/issue_preview.rs
expression: result
---
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                            ╭Issue Info╮
                            │Select an │
                            │issue to  │
                            │see       │
                            │details.  │
                            │          │
                            │          │
                            │          │
                            ╰──────────╯
