tests/snapshots/issue_preview__issue_preview_open_issue.snap
---
source: tests/issue_preview.rs
expression: result
---
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                            ╭Issue Info╮
                            │Type:     │
                            │Issue     │
                            │State:    │
                            │Open      │
                            │Author:   │
                            │johndoe   │
                            │Created:  │
                            ╰──────────╯
