tests/snapshots/issue_preview__issue_preview_pull_request.snap
---
source: tests/issue_preview.rs
expression: result
---
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                            ╭Issue Info╮
                            │Type: Pull│
                            │Request   │
                            │State:    │
                            │Open      │
                            │Author:   │
                            │devuser   │
                            │]8;;https://github.com/owner/repo/pull/456\Open #4...]8;;\         │
                            ╰──────────╯
